--- a/my-first-one.html
+++ b/my-first-one.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+git init<!DOCTYPE html>
 <html lang="en">
 <head>
     
@@ -11,6 +11,9 @@
 </head>
 <body>
     <div class="blog">
+        <p>i will go to sajek one day no
+            one can stop me from that;
+        </p>
         <p>sajek onek shundor</p>
         <p>sajek jai valoi lagse</p>
     </div>
